--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -2,7 +2,7 @@ FROM debian:stable-slim
 
 SHELL ["/bin/bash", "-c"] 
 
-RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get -y install ca-certificates curl \
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get -y install build-essential ca-certificates curl \
 && curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs > rustup.sh \
 && chmod +x rustup.sh \
 && ./rustup.sh -y \
