Source cargo env in .bashrc

--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -9,5 +9,6 @@ RUN chsh -s /bin/bash \
 && ./rustup.sh -y \
 && rm rustup.sh \
 && source $HOME/.cargo/env \
+&& echo "source \$HOME/.cargo/env" >> $HOME/.bashrc
 && cargo install cargo-web \
 && rustup target add wasm32-unknown-unknown
