--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -3,7 +3,7 @@ FROM rust:slim
 SHELL ["/bin/bash", "-c"] 
 
 RUN chsh -s /bin/bash \
-&& apt-get update && DEBIAN_FRONTEND=noninteractive apt-get -y install build-essential ca-certificates curl \
+&& apt-get update && DEBIAN_FRONTEND=noninteractive apt-get -y install chromium chromium-l10n build-essential ca-certificates curl \
 && curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs > rustup.sh \
 && chmod +x rustup.sh \
 && ./rustup.sh -y \
