--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,8 @@ image: alpine:latest
 
 variables:
   DOCKER_DRIVER: overlay2
+  STAGING_API_URL: "https://staging.web-api.violetear.proxmox-1.schmilblick.org"
+  PRODUCTION_API_URL: "https://production.web-api.violetear.proxmox-1.schmilblick.org"
 
 stages:
   - bootstrap
@@ -33,6 +35,13 @@ build_docker_image:
   services:
     - docker:stable-dind
   script:
+    - |
+      if [[ "$CI_COMMIT_REF_SLUG" == "staging" ]]; then
+        sed -i "s/%API_URL%/$STAGING_API_URL/" target/deploy/config.example.json
+      elif [[ "$CI_COMMIT_REF_SLUG" == "production" ]]; then
+        sed -i "s/%API_URL%/$PRODUCTION_API_URL/" target/deploy/config.example.json
+      fi
+    - mv target/deploy/config.example.json target/deploy/config.json
     - |
       if [[ -z "$CI_COMMIT_TAG" ]]; then
         export CI_APPLICATION_REPOSITORY=${CI_APPLICATION_REPOSITORY:-$CI_REGISTRY_IMAGE/$CI_COMMIT_REF_SLUG}
