--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,9 +37,9 @@ build_docker_image:
   script:
     - |
       if [[ "$CI_COMMIT_REF_SLUG" == "staging" ]]; then
-        sed -i "s/%API_URL%/$STAGING_API_URL/" target/deploy/config.example.json
+        sed -i "s#%API_URL%#$STAGING_API_URL#" target/deploy/config.example.json
       elif [[ "$CI_COMMIT_REF_SLUG" == "production" ]]; then
-        sed -i "s/%API_URL%/$PRODUCTION_API_URL/" target/deploy/config.example.json
+        sed -i "s#%API_URL%#$PRODUCTION_API_URL#" target/deploy/config.example.json
       fi
     - mv target/deploy/config.example.json target/deploy/config.json
     - |
