--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ serde = "1"
 serde_derive = "1"
 serde_json = "1"
 stdweb = "0.4"
-yew = "0.7"
+yew = "0.8"
+chrono = { version = "0.4", features = [ "serde" ] }
